--- a/index.html
+++ b/index.html
@@ -706,6 +706,79 @@
                 <div class="swiper-wrapper">
                     <!-- Slide 1 -->
                     <div class="swiper-slide">
+                        <a target="_blank" href="https://www.instagram.com/aclinica.mz">
+                            <div class="card">
+                                <div class="top">
+                                    <div class="userDeatils">
+                                        <div class="profileImg">
+                                            <img src="img/profile.png" alt="A Clínica" class="cover">
+                                        </div>
+                                        <h3>A Clínica<br><span>@aclinica.mz</span></h3>
+                                    </div>
+                                    <div class="dot">
+                                        <img src="img/icons/dot.png" alt="dot">
+                                    </div>
+                                </div>
+                                <div class="imgBg">
+                                    <img src="img/team/490766995_17846933964448741_4775189720498935248_n.jpg" alt="bg"
+                                        class="cover">
+                                </div>
+                                <div class="btns">
+                                    <div class="left">
+                                        <img src="img/icons/heart_red.png" alt="heart" class="heart"
+                                            onclick="likeButton()">
+                                        <img src="img/icons/comment.png" alt="comment">
+                                        <img src="img/icons/share.png" alt="share">
+                                    </div>
+                                    <div class="right">
+                                        <img src="img/icons/bookmark.png" alt="bookmark">
+                                    </div>
+                                </div>
+                                <h4 class="message"><b>aclinica.mz</b> 💫A Clínica nasceu do sonho da Inês!💫
+                                    Autora da página profissional de Instagram e...</h4>
+                                <h4 class="comments"><a href="https://www.instagram.com">Ver
+                                        todos os comentários</a></h4>
+                            </div>
+                        </a>
+                    </div> <!-- Slide 1 -->
+                    <div class="swiper-slide">
+                        <a target="_blank" href="https://www.instagram.com/aclinica.mz">
+                            <div class="card">
+                                <div class="top">
+                                    <div class="userDeatils">
+                                        <div class="profileImg">
+                                            <img src="img/profile.png" alt="A Clínica" class="cover">
+                                        </div>
+                                        <h3>A Clínica<br><span>@aclinica.mz</span></h3>
+                                    </div>
+                                    <div class="dot">
+                                        <img src="img/icons/dot.png" alt="dot">
+                                    </div>
+                                </div>
+                                <div class="imgBg">
+                                    <img src="img/team/489675010_17846359764448741_1012401743640745314_n.jpg" alt="bg"
+                                        class="cover">
+                                </div>
+                                <div class="btns">
+                                    <div class="left">
+                                        <img src="img/icons/heart_red.png" alt="heart" class="heart"
+                                            onclick="likeButton()">
+                                        <img src="img/icons/comment.png" alt="comment">
+                                        <img src="img/icons/share.png" alt="share">
+                                    </div>
+                                    <div class="right">
+                                        <img src="img/icons/bookmark.png" alt="bookmark">
+                                    </div>
+                                </div>
+                                <h4 class="message"><b>aclinica.mz</b> A nossa Ana é Educadora de Infância e Técnica de
+                                    Saúde Pública e Gestão Ambiental,...</h4>
+                                <h4 class="comments"><a href="https://www.instagram.com/aclinica.mz">Ver
+                                        todos os comentários</a></h4>
+                            </div>
+                        </a>
+                    </div>
+                    <!-- Slide 1 -->
+                    <div class="swiper-slide">
                         <a target="_blank" href="https://www.instagram.com/aclinica.mz/p/DIGqiErCdTG/">
                             <div class="card">
                                 <div class="top">
@@ -734,12 +807,11 @@
                                         <img src="img/icons/bookmark.png" alt="bookmark">
                                     </div>
                                 </div>
-                                <h4 class="likes">55 likes</h4>
                                 <h4 class="message"><b>aclinica.mz</b> A Joana é a nossa Psicóloga Clínica. Apaixonada
                                     pela
                                     mente humana em todas as suas...</h4>
                                 <h4 class="comments"><a href="https://www.instagram.com/aclinica.mz/p/DIGqiErCdTG/">Ver
-                                        todos os 546 comentários</a></h4>
+                                        todos os comentários</a></h4>
                             </div>
                         </a>
                     </div>
@@ -774,11 +846,11 @@
                                         <img src="img/icons/bookmark.png" alt="bookmark">
                                     </div>
                                 </div>
-                                <h4 class="likes">55 likes</h4>
+
                                 <h4 class="message"><b>aclinica.mz</b> A Clínica vai abrir portas no dia 14 de Abril às
                                     8
                                     horas!</h4>
-                                <h4 class="comments"><a href="https://www.instagram.com/p/DIQYLHrieeT/">Ver todos os 10
+                                <h4 class="comments"><a href="https://www.instagram.com/p/DIQYLHrieeT/">Ver todos os
                                         comentários</a></h4>
                             </div>
                         </a>
@@ -813,16 +885,53 @@
                                         <img src="img/icons/bookmark.png" alt="bookmark">
                                     </div>
                                 </div>
-                                <h4 class="likes">55 likes</h4>
+
                                 <h4 class="message"><b>aclinica.mz</b> Quem segue a página Dona Bebé já conhece o
                                     Calisto!
                                     Como não podia deixar de ser</h4>
                                 <h4 class="comments"><a href="https://www.instagram.com/aclinica.mz/p/DH_ndcaCIBF/">Ver
-                                        todos os 5 comentários</a></h4>
+                                        todos os comentários</a></h4>
                             </div>
                         </a>
                     </div>
                     <!-- Slide 3 -->
+                    <div class="swiper-slide">
+                        <a target="_blank" href="https://www.instagram.com/aclinica.mz">
+                            <div class="card">
+                                <div class="top">
+                                    <div class="userDeatils">
+                                        <div class="profileImg">
+                                            <img src="img/profile.png" alt="A Clínica" class="cover">
+                                        </div>
+                                        <h3>A Clínica<br><span>@aclinica.mz</span></h3>
+                                    </div>
+                                    <div class="dot">
+                                        <img src="img/icons/dot.png" alt="dot">
+                                    </div>
+                                </div>
+                                <div class="imgBg">
+                                    <img src="img/team/488410208_17845849230448741_6481117328656971595_n.jpg" alt="bg"
+                                        class="cover">
+                                </div>
+                                <div class="btns">
+                                    <div class="left">
+                                        <img src="img/icons/heart_red.png" alt="heart" class="heart"
+                                            onclick="likeButton()">
+                                        <img src="img/icons/comment.png" alt="comment">
+                                        <img src="img/icons/share.png" alt="share">
+                                    </div>
+                                    <div class="right">
+                                        <img src="img/icons/bookmark.png" alt="bookmark">
+                                    </div>
+                                </div>
+
+                                <h4 class="message"><b>aclinica.mz</b> A Erika é a nossa Nutricionista Clínica com mais
+                                    de 10 anos de experiência a fazer...</h4>
+                                <h4 class="comments"><a href="https://www.instagram.com/aclinica.mz">Ver
+                                        todos os comentários</a></h4>
+                            </div>
+                        </a>
+                    </div><!-- Slide 3 -->
                     <div class="swiper-slide">
                         <a target="_blank" href="https://www.instagram.com/aclinica.mz/p/DH_ndcaCIBF/">
                             <div class="card">
@@ -851,12 +960,88 @@
                                         <img src="img/icons/bookmark.png" alt="bookmark">
                                     </div>
                                 </div>
-                                <h4 class="likes">55 likes</h4>
+
                                 <h4 class="message"><b>aclinica.mz</b> Quem segue a página Dona Bebé já conhece o
                                     Calisto!
                                     Como não podia deixar de ser</h4>
                                 <h4 class="comments"><a href="https://www.instagram.com/aclinica.mz/p/DH_ndcaCIBF/">Ver
-                                        todos os 5 comentários</a></h4>
+                                        todos os comentários</a></h4>
+                            </div>
+                        </a>
+                    </div>
+                    <!-- Slide 3 -->
+                    <div class="swiper-slide">
+                        <a target="_blank" href="https://www.instagram.com/aclinica.mz">
+                            <div class="card">
+                                <div class="top">
+                                    <div class="userDeatils">
+                                        <div class="profileImg">
+                                            <img src="img/profile.png" alt="A Clínica" class="cover">
+                                        </div>
+                                        <h3>A Clínica<br><span>@aclinica.mz</span></h3>
+                                    </div>
+                                    <div class="dot">
+                                        <img src="img/icons/dot.png" alt="dot">
+                                    </div>
+                                </div>
+                                <div class="imgBg">
+                                    <img src="img/team/488780051_17845973100448741_8866613829990852553_n.jpg" alt="bg"
+                                        class="cover">
+                                </div>
+                                <div class="btns">
+                                    <div class="left">
+                                        <img src="img/icons/heart_red.png" alt="heart" class="heart"
+                                            onclick="likeButton()">
+                                        <img src="img/icons/comment.png" alt="comment">
+                                        <img src="img/icons/share.png" alt="share">
+                                    </div>
+                                    <div class="right">
+                                        <img src="img/icons/bookmark.png" alt="bookmark">
+                                    </div>
+                                </div>
+
+                                <h4 class="message"><b>aclinica.mz</b> A Marina é a nossa Terapeuta Ocupacional com mais
+                                    de 12 anos de experiência em Moçambique...</h4>
+                                <h4 class="comments"><a href="https://www.instagram.com/aclinica.mz">Ver
+                                        todos os comentários</a></h4>
+                            </div>
+                        </a>
+                    </div>
+                    <!-- Slide 3 -->
+                    <div class="swiper-slide">
+                        <a target="_blank" href="https://www.instagram.com/aclinica.mz">
+                            <div class="card">
+                                <div class="top">
+                                    <div class="userDeatils">
+                                        <div class="profileImg">
+                                            <img src="img/profile.png" alt="A Clínica" class="cover">
+                                        </div>
+                                        <h3>A Clínica<br><span>@aclinica.mz</span></h3>
+                                    </div>
+                                    <div class="dot">
+                                        <img src="img/icons/dot.png" alt="dot">
+                                    </div>
+                                </div>
+                                <div class="imgBg">
+                                    <img src="img/team/489569766_1377899496673493_4913474251986219692_n.jpg" alt="bg"
+                                        class="cover">
+                                </div>
+                                <div class="btns">
+                                    <div class="left">
+                                        <img src="img/icons/heart_red.png" alt="heart" class="heart"
+                                            onclick="likeButton()">
+                                        <img src="img/icons/comment.png" alt="comment">
+                                        <img src="img/icons/share.png" alt="share">
+                                    </div>
+                                    <div class="right">
+                                        <img src="img/icons/bookmark.png" alt="bookmark">
+                                    </div>
+                                </div>
+
+                                <h4 class="message"><b>aclinica.mz</b>o dia 7 de Abril celebra-se o Dia da Mulher
+                                    Moçambicana, alusivo à morte de Josina Machel...</h4>
+                                <h4 class="comments"><a href="https://www.instagram.com/aclinica.mz">Ver
+                                        todos os comentários</a></h4>
                             </div>
                         </a>
                     </div>
