--- a/header.html
+++ b/header.html
@@ -3,7 +3,7 @@
     <p>
         Este site usa cookies para garantir que você tenha a melhor experiência. Ao continuar a navegar, você concorda
         com o uso de cookies.
-        <a href="/politica-de-cookies" target="_blank">Saiba mais</a>
+        <a href="pages/politica.html" target="_blank">Saiba mais</a>
     </p>
     <button id="accept-cookies" class="accept-btn">Aceitar</button>
 </div>
@@ -16,7 +16,7 @@
                     <li><a href="#" class="text-white"><img src="img/icons/contacto.png" class="fa mr-2" width="16"
                                 height="16" alt=""> +258 84 869 7194</a></li>
                     <li><img src="img/icons/home.png" class="fa mr-2" width="16" height="16" alt=""> Edifício ou
-                        Shopping 24, Avenida 24 de Julho, Loja 20  R/c
+                        Shopping 24, Avenida 24 de Julho, Loja 20 R/c
                     </li>
                     <li><img src="img/icons/horario.png" class="fa mr-2" width="16" height="16" alt=""> Seg a Sex 8:00
                         às 18:00 | Sab: 9h às 12h</li>
@@ -24,8 +24,8 @@
             </div>
             <div class="col-lg-2">
                 <div class="header__top__right">
-                    <a href="#"><i class="fa fa-facebook"></i></a>
-                    <a href="#"><i class="fa fa-instagram"></i></a>
+                    <a href="https://www.instagram.com/aclinica.mz"><i class="fa fa-facebook"></i></a>
+                    <a href="https://www.instagram.com/aclinica.mz"><i class="fa fa-instagram"></i></a>
                 </div>
             </div>
         </div>
