--- a/pages/workshp-gravidez.html
+++ b/pages/workshp-gravidez.html
@@ -117,8 +117,7 @@
     <!-- Blog Details Section Begin -->
     <section class="blog-details spad mt-9">
         <div class="container">
-            <div class="blog__details__hero set-bg mb-2 position-relative"
-                data-setbg="../img/blog/details/gravidez.jpeg"
+            <div class="blog__details__hero set-bg mb-2 position-relative" data-setbg="../img/blog/details/gravidez.jpg"
                 style="background: url('../img/blog/details/bebe.jpg') no-repeat center center/cover; height: 400px;">
                 <div class="services__details__content" style="background-image: url(../img/bg2.png);">
                     <div class="d-flex w-100 align-items-end">
