--- a/pages/workshop-amament.html
+++ b/pages/workshop-amament.html
@@ -166,8 +166,8 @@
 
                             </div>
                         </div>
-                        <div class="col-lg-12 d-flex">
-                            <div class="col-lg-6">
+                        <div class=" d-flex">
+                            <div class="w-100">
                                 <ul class="services__details__feature mt-2">
                                     <li><i class="fa fa-check-circle"></i> Como se gere a amamentação durante o sono dos
                                         bebés?
@@ -192,9 +192,9 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-lg-6">
+                            <div class="w-100">
                                 <div class="row">
-                                    <div class="col-lg-12 col-md-12">
+                                    <div class="w-100">
                                         <div class="consultation__video set-bg"
                                             data-setbg="../img/blog/details/mae-deitada.jpg">
                                             <a href="#" class="play-btn ">Online - 60min</a>
@@ -229,8 +229,8 @@
 
                             </div>
                         </div>
-                        <div class="col-lg-12 d-flex">
-                            <div class="col-lg-6">
+                        <div class="d-flex">
+                            <div class="w-100">
                                 <p class="mt-4">
                                     Na sociedade atual ouvem-se muitos relatos de amamentação dolorosa e parece que não
                                     há como fugir a esta realidade. No
@@ -245,9 +245,9 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-lg-6">
+                            <div class="w-100">
                                 <div class="row">
-                                    <div class="col-lg-12 col-md-12">
+                                    <div class="w-100">
                                         <div class="consultation__video set-bg"
                                             data-setbg="../img/blog/details/mae-amamentando.jpg">
                                             <a href="#" class="play-btn ">Online - 60min</a>
