--- a/pages/workshop-bebe.html
+++ b/pages/workshop-bebe.html
@@ -165,7 +165,7 @@
 
                             </div>
                         </div>
-                        <div class="col-lg-12 d-flex">
+                        <div class=" d-flex">
                             <div class="col-lg-6">
                                 <p>Neste workshop viajamos no cérebro de uma criança desde o seu nascimento até ganhar a
                                     sua autonomia. Percebemos o
@@ -178,7 +178,7 @@
                             </div>
                             <div class="col-lg-6">
                                 <div class="row">
-                                    <div class="col-lg-12 col-md-12">
+                                    <div class="w-100">
                                         <div class="consultation__video set-bg"
                                             data-setbg="../img/blog/details/bebe-e-mae.jpg">
                                             <a href="#" class="play-btn ">Online - 60min</a>
@@ -213,7 +213,7 @@
 
                             </div>
                         </div>
-                        <div class="col-lg-12 d-flex">
+                        <div class=" d-flex">
                             <div class="col-lg-6">
                                 <p class="mt-4">
                                     Os primeiros 3 meses de da do bebé são considerados o último trimestre de gestação
@@ -230,7 +230,7 @@
                             </div>
                             <div class="col-lg-6">
                                 <div class="row">
-                                    <div class="col-lg-12 col-md-12">
+                                    <div class="w-100">
                                         <div class="consultation__video set-bg"
                                             data-setbg="../img/blog/details/bebe-no-colo.jpg">
                                             <a href="#" class="play-btn ">Online - 60min</a>
@@ -265,7 +265,7 @@
 
                             </div>
                         </div>
-                        <div class="col-lg-12 d-flex">
+                        <div class=" d-flex">
                             <div class="col-lg-6">
                                 <p class="mt-4">
                                     Se estás grávida ou já tiveste o teu bebé e tens curiosidade sobre o que vai
@@ -280,7 +280,7 @@
                             </div>
                             <div class="col-lg-6">
                                 <div class="row">
-                                    <div class="col-lg-12 col-md-12">
+                                    <div class="w-100">
                                         <div class="consultation__video set-bg"
                                             data-setbg="../img/blog/details/bebe-a-gatinhar.jpg">
                                             <a href="#" class="play-btn ">Online - 60min</a>
@@ -313,7 +313,7 @@
 
                             </div>
                         </div>
-                        <div class="col-lg-12 d-flex">
+                        <div class=" d-flex">
                             <div class="col-lg-6">
                                 <p class="mt-4">
                                     Como deve dormir o meu bebé? Será que é seguro dormir na mesma cama que os pais?
@@ -331,7 +331,7 @@
                             </div>
                             <div class="col-lg-6">
                                 <div class="row">
-                                    <div class="col-lg-12 col-md-12">
+                                    <div class="w-100">
                                         <div class="consultation__video set-bg"
                                             data-setbg="../img/blog/details/bebe-a-dormir-de-bariga.jpg">
                                             <a href="#" class="play-btn ">Online - 60min</a>
