--- a/pages/Workshop-pediatria.html
+++ b/pages/Workshop-pediatria.html
@@ -166,7 +166,7 @@
 
                             </div>
                         </div>
-                        <div class="col-lg-12 d-flex">
+                        <div class=" d-flex">
                             <div class="col-lg-6">
                                 <p>Quando o Inverno chega traz com ele as doenças respiratórias. Neste workshop vai
                                     poder conhecer as principais doenças
@@ -180,7 +180,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-lg-6">
+                            <div class="w-100">
                                 <div class="row">
                                     <div class="col-lg-12 col-md-12">
                                         <div class="consultation__video set-bg"
