--- a/pages/workshop-amament.html
+++ b/pages/workshop-amament.html
@@ -167,7 +167,7 @@
                             </div>
                         </div>
                         <div class=" d-flex">
-                            <div class="w-100">
+                            <div class="col-lg-6">
                                 <ul class="services__details__feature mt-2">
                                     <li><i class="fa fa-check-circle"></i> Como se gere a amamentação durante o sono dos
                                         bebés?
@@ -230,7 +230,7 @@
                             </div>
                         </div>
                         <div class="d-flex">
-                            <div class="w-100">
+                            <div class="col-lg-6">
                                 <p class="mt-4">
                                     Na sociedade atual ouvem-se muitos relatos de amamentação dolorosa e parece que não
                                     há como fugir a esta realidade. No
