--- a/pages/workshop-primeiros-socorros.html
+++ b/pages/workshop-primeiros-socorros.html
@@ -167,7 +167,7 @@
 
                             </div>
                         </div>
-                        <div class="col-lg-12 d-flex">
+                        <div class=" d-flex">
                             <div class="col-lg-6">
                                 <p>O engasgo é uma das maiores fontes de preocupação para os pais durante a introdução
                                     alimentar. Neste workshop vai
@@ -180,7 +180,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-lg-6">
+                            <div class="w-100">
                                 <div class="row">
                                     <div class="col-lg-12 col-md-12">
                                         <div class="consultation__video set-bg"
