--- a/pages/workshp-gravidez.html
+++ b/pages/workshp-gravidez.html
@@ -166,7 +166,7 @@
 
                             </div>
                         </div>
-                        <div class="col-lg-12 d-flex">
+                        <div class=" d-flex">
                             <div class="col-lg-6">
                                 <p>A ansiedade é um dos transtornos mais comuns durante a gravidez. Venha perceber
                                     como
@@ -178,7 +178,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-lg-6">
+                            <div class="w-100">
                                 <div class="row">
                                     <div class="col-lg-12 col-md-12">
                                         <div class="consultation__video set-bg"
