--- a/pages/worshop-Parentalidade.html
+++ b/pages/worshop-Parentalidade.html
@@ -165,7 +165,7 @@
 
                             </div>
                         </div>
-                        <div class="col-lg-12 d-flex">
+                        <div class=" d-flex">
                             <div class="col-lg-6">
                                 <p>Todas as crianças passam por uma fase onde se querem afirmar e testam os limites
                                     impostos. Descubra o que se esconde por
@@ -176,7 +176,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-lg-6">
+                            <div class="w-100">
                                 <div class="row">
                                     <div class="col-lg-12 col-md-12">
                                         <div class="consultation__video set-bg"
