--- a/team.html
+++ b/team.html
@@ -273,7 +273,7 @@
                                         </div>
                                         <div class="team-content d-grid justify-items-center justify-content-center">
                                             <h4 class="mb-2">Elsa Manjate</h4>
-                                            <p>Agente de Medicina Preventiva </p>
+                                            <p>Tecnica de vacinação</p>
 
                                         </div>
                                     </a>
@@ -357,7 +357,7 @@
                                         </div>
                                         <div class="team-content d-grid justify-items-center justify-content-center">
                                             <h4 class="mb-2">Tânia Semende</h4>
-                                            <p class="text-left">Enfermeira especialista saúde materno-infantil</p>
+                                            <p class="text-left">Saúde materno-infantil</p>
                                         </div>
                                     </a>
                                 </div>
